@@ -1,9 +1,5 @@
 # Author::    MoneySpyder, http://moneyspyder.co.uk
 
-#
-# Unit test for PSL Card
-#
-
 require File.dirname(__FILE__) + '/../test_helper'
 
 class RemotePslCardTest < Test::Unit::TestCase
@@ -14,8 +10,6 @@ class RemotePslCardTest < Test::Unit::TestCase
   REFERRED_AMOUNT = 6000
   DECLINED_AMOUNT = 11000
   KEEP_CARD_AMOUNT = 15000
-  
-  CURRENCY = 'GBP'
 
   def setup
     @gateway = PslCardGateway.new(
@@ -23,135 +17,127 @@ class RemotePslCardTest < Test::Unit::TestCase
     )
     
     # Replace with PSLCard Test Credit information
-    @uk_maestro = CreditCard.new(
-      :number => '',
-      :month => 12,
-      :year => 2014,
+    @uk_maestro = credit_card('',
+      :month => 6,
+      :year => 2009,
       :verification_value => '',
-      :issue_number => 1,
-      :first_name => '',
-      :last_name => ''
+      :issue_number => '1'
     )
+    
     @uk_maestro_address = { 
       :address1 => '',
-      :address2 => '=',
-      :zip => '',
-      :country => '',
-      :phone => '',
-      :name => ''
+      :address2 => '',
+      :city     => '',
+      :state    => '',
+      :zip      => ''
     }
     
-    @solo = CreditCard.new(
-      :number => '',
+    @solo = credit_card('',
       :month => 06,
       :year => 2008,
       :verification_value => '',
-      :issue_number => '',
-      :first_name => '',
-      :last_name => ''
+      :issue_number => '01'
     )
+    
     @solo_address = {
       :address1 => '',
-      :address2 => '',
-      :address3 => '',
-      :zip => '',
-      :country => '',
-      :phone => '',
-      :name => ''
+      :city     => '',
+      :state    => '',
+      :zip      => ''
     }
     
-    @visa = CreditCard.new(
-      :number => '',
+    @visa = credit_card('',
       :month => 12,
       :year => 2009,
-      :verification_value => '',
-      :first_name => '',
-      :last_name => ''
+      :verification_value => ''
     )
+    
     @visa_address = {
       :address1 => '',
       :address2 => '',
-      :address3 => '',
-      :address4 => '',
-      :zip => '',
-      :country => '',
-      :phone => '',
-      :name => ''
+      :city     => '',
+      :state => '',
+      :zip      => '' 
     }
   end
   
-  def test_successful_purchase
-    options = {
-      :billing_address => @solo_address,
-      :test => true
-    }
-    response = @gateway.purchase(Money.new(ACCEPT_AMOUNT, CURRENCY), @solo, options)
-    assert response.success?
-    assert response.test?
-    
-    options = {
-      :billing_address => @visa_address,
-      :test => true
-    }
-    response = @gateway.purchase(Money.new(ACCEPT_AMOUNT, CURRENCY), @visa, options)
+  def test_successful_visa_purchase
+    response = @gateway.purchase(ACCEPT_AMOUNT, @visa,
+      :address => @visa_address
+    )
     assert response.success?
     assert response.test?
   end
-
-  def test_unsuccessful_purchase
-    options = {
-      :billing_address => @uk_maestro_address,
-      :test => true
-    }
-    response = @gateway.purchase(Money.new(REFERRED_AMOUNT, CURRENCY), @uk_maestro, options)
+  
+  def test_successful_visa_purchase_specifying_currency
+    response = @gateway.purchase(ACCEPT_AMOUNT, @visa,
+      :address => @visa_address,
+      :currency => 'GBP'
+    )
+    assert response.success?
+    assert response.test?
+  end
+  
+  def test_successful_solo_purchase
+    response = @gateway.purchase(ACCEPT_AMOUNT, @solo, 
+      :address => @solo_address
+    )
+    assert response.success?
+    assert response.test?
+  end
+  
+  def test_referred_purchase
+    response = @gateway.purchase(REFERRED_AMOUNT, @uk_maestro, 
+      :address => @uk_maestro_address
+    )
     assert !response.success?
     assert response.test?
-    
-    response = @gateway.purchase(Money.new(DECLINED_AMOUNT, CURRENCY), @uk_maestro, options)
+  end
+  
+  def test_declined_purchase
+    response = @gateway.purchase(DECLINED_AMOUNT, @uk_maestro, 
+      :address => @uk_maestro_address
+    )
     assert !response.success?
     assert response.test?
-    
-    response = @gateway.purchase(Money.new(KEEP_CARD_AMOUNT, CURRENCY), @uk_maestro, options)
+  end
+  
+  def test_declined_keep_card_purchase
+    response = @gateway.purchase(KEEP_CARD_AMOUNT, @uk_maestro, 
+      :address => @uk_maestro_address
+    )
     assert !response.success?
     assert response.test?
   end
   
   def test_successful_authorization
-    options = {
-      :billing_address => @uk_maestro_address,
-      :test => true
-    }
-    response = @gateway.authorize(Money.new(ACCEPT_AMOUNT, CURRENCY), @uk_maestro, options)
+    response = @gateway.authorize(ACCEPT_AMOUNT, @uk_maestro, 
+      :address => @uk_maestro_address
+    )
     assert response.success?
     assert response.test?
   end
   
   def test_no_login
-    options = {
-      :billing_address => @uk_maestro_address,
-      :test => true
-    }
     @gateway = PslCardGateway.new(
       :login => ''
     )
-    response = @gateway.authorize(Money.new(ACCEPT_AMOUNT, CURRENCY), @uk_maestro, options)
+    response = @gateway.authorize(ACCEPT_AMOUNT, @uk_maestro, 
+      :address => @uk_maestro_address
+    )
     assert !response.success?
     assert response.test?
   end
   
   def test_successful_authorization_and_capture
-    options = {
-      :billing_address => @uk_maestro_address,
-      :test => true
-    }
-    amount = Money.new(ACCEPT_AMOUNT, CURRENCY)
-    response = @gateway.authorize(amount, @uk_maestro, options)
-    assert response.success?
-    assert response.test?
+    authorization = @gateway.authorize(ACCEPT_AMOUNT, @uk_maestro,
+      :address => @uk_maestro_address
+    )
+    assert authorization.success?
+    assert authorization.test?
     
-    auth = response.authorization
-    new_response = @gateway.capture(amount, auth)
-    assert response.success?
-    assert response.test?
+    capture = @gateway.capture(ACCEPT_AMOUNT, authorization.authorization)
+    assert capture.success?
+    assert capture.test?
   end
 end
