@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Update and test PslCardGateway [cody]
+#
 # * Add Laser card type [cody]
 #
 # * Update Nochex documentation [cody]
